log/build_2024-11-29_21-04-11/follow/stderr.log
  File "/home/robot/human_ws/install/follow/lib/python3.10/site-packages/follow/follow_tag.py", line 97
    transform_coordinate = 
                           ^
SyntaxError: invalid syntax

